# badge-2025

./: .clang-format  .gitignore  CMakeLists.txt  core1.cpp  font.cpp  font.hpp  font_data.hpp  irq.cpp  lcd.cpp  lcd.hpp  main.cpp
assets/: CMakeLists.txt  assets.yaml  process-assets.py
assets/assets/: __init__.py  animation.py  base.py  filesystem.py  font.py  image.py
assets/files/: .hidden.txt  README.txt  hidden.txt
assets/gfx/: blocks-mockup.pyxel  blocks-tiles.pyxel  flags.pyxel  icons.pyxel
assets/py/: boot.py
badge/: animation.cpp  animation.hpp  badge-2025.h  badge.cmake  buttons.cpp  buttons.hpp  drawing.cpp  drawing.hpp  factory_test.cpp  factory_test.hpp  flags.cpp  flags.hpp  font.cpp  font.hpp  font_data.hpp  image.hpp  lcd.cpp  lcd.hpp  lvgl_conf.h  lvgl_display.cpp  modbadge.c  pixel.hpp  storage.cpp  storage.hpp
board/: badge-2025.h  buttons.hpp  lcd.cpp  lcd.hpp
core/: core1.cpp  core1.hpp  irq.cpp
doom/: CMakeLists.txt  am_map.c  d_event.h  d_main.c  d_net.c  d_net.h  d_player.h  doomdef.h  doomstat.h  doomtype.h  dstrings.c  f_finale.c  g_game.c  hu_lib.c  i_system.c  i_system.h  i_video.h  info.c  info.h  m_cheat.c  m_fixed.c  m_menu.c  m_misc.c  p_doors.c  p_enemy.c  p_floor.c  p_map.c  p_maputl.c  p_mobj.c  p_mobj.h  p_pspr.c  p_pspr.h  p_saveg.c  p_setup.c  p_spec.c  p_switch.c  p_tick.c  r_data.c  r_draw.c  r_main.c  (+14 more)
doom/rp2040/: graphics.c  launch_doom.c  network.c  no_sound.c  system.cpp  video.cpp
doom/wad/: CMakeLists.txt  byteio.hpp  main.cpp  wad.cpp  wad.hpp
drawing/: drawing.cpp  drawing.hpp  font.cpp
filesystem/: CMakeLists.txt  disk.cpp  disk.hpp  disk.img  gen-fs.py  msc.cpp
filesystem/files/: README.md  README.txt  hidden.txt
fonts/: CMakeLists.txt  ttf.py
fs/: fs.cpp  fs.hpp  msc.cpp
games/: blocks.cpp  blocks.hpp  blocks_data.hpp  flappy.cpp  flappy.hpp  othello.cpp  othello.hpp  snek.cpp  snek.hpp
gfx/: CMakeLists.txt  image.cpp  image.hpp  promo-image.psd  rom-gen.py
lcd/: drawing.hpp  font.cpp  font.hpp  font_data.hpp  lcd.cmake  lcd.cpp  lcd.hpp  modlcd.c
mpy/: mpconfigport.h  mphalport.h  mphalport_softtimer.c  mphalport_stdio.c  mphalport_time.c  mpy.c  mpy.cmake  mpy.cpp  mpy.hpp  pendsv.cpp  pendsv.h
tools/: analyze-map.py  auto-program.py
ui/: animation.cpp  animation.hpp  animations.cpp  animations.hpp  code_entry.cpp  code_entry.hpp  flag_view.cpp  flag_view.hpp  menu.cpp  menu.hpp  qr_code.cpp  qr_code.hpp  qr_code_data.hpp  qr_code_galois.hpp  readme.cpp  readme.hpp  splash.cpp  splash.hpp  state.cpp  state.hpp  ui.cpp  ui.hpp
usb/: ffport.c  msc.cpp  stdio_driver.cpp  tusb_config.h  usb-descriptors.cpp  usb.cpp  usb.hpp
utils/: crc.cpp  crc.hpp  sha1.hpp
